Updated dependencies to fix YouTube playback